# CrackATS

./: .gitignore  LINKEDIN_SCRAPING.md  README.md  applications.db  config.py  database.py  exceptions.py  file_ops.py  groq_client.py  job_tool.py  main.py  paths.py  processor.py  prompt_creator.py  pyproject.toml  requirements.txt  scraper.py
static/: app.js  index.html  index.html.backup  style.css
templates/: cover-letter-template.txt  prompt-template.txt  resume-template.tex
