[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crack-ats"
version = "1.0.0"
description = "AI-powered job application tool for creating tailored resumes and cover letters"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Prasad Raju G"}
]
keywords = ["resume", "job", "application", "scraper", "latex", "ats"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Text Processing :: Markup :: LaTeX",
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
scraper = ["playwright>=1.40.0"]
web = ["fastapi>=0.100.0", "uvicorn>=0.23.0"]
dev = ["ruff>=0.1.0", "pytest>=7.0.0", "mypy>=1.0.0"]

[project.scripts]
crack-ats = "job_tool:main"

[project.urls]
Homepage = "https://github.com/anomalyco/crack_ats"
Repository = "https://github.com/anomalyco/crack_ats"
Issues = "https://github.com/anomalyco/crack_ats/issues"

[tool.setuptools]
py-modules = ["job_tool", "scraper", "processor", "prompt_creator", "file_ops", "groq_client"]

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "S",   # flake8-bandit (security)
    "C90", # mccabe complexity
    "N",   # pep8-naming
    "T20", # flake8-print
]
ignore = ["D100", "D103", "D104", "S603", "S607", "S101", "S311"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 12
